chore: fix on small device

--- a/css/styles.css
+++ b/css/styles.css
@@ -1593,6 +1593,30 @@ a {
 }
 
 @media(max-width: 375px){
+    .registration p{
+        font-size: 13px;
+    }
+
+    .hero .desc{
+        margin: 0 15px;
+    }
+
+    .main-desc-btn{
+        margin: 0 7px;
+    }
+    
+    .main-desc-btn .button-col{
+        margin-top: 10px;
+    }
+
+    .button,
+    .button-2{
+        font-size: 15px;
+        padding: 10px 10px;
+        width: 200px;
+        font-weight: 500;
+    }
+
     .tech-visit h1{
         font-size: 30px;
     }
@@ -1603,6 +1627,57 @@ a {
 
     .speaker h1{
         font-size: 30px;
+    }
+
+    .copyright p{
+        font-size: 12px;
+    }
+
+    .footer .footer-img img{
+        width: 100px;
+    }
+
+    .programme h1{
+        font-size: 30px;
+    }
+
+    .programme .time-slot{
+        margin-left: 15px;
+        margin-bottom: 15px;
+    }
+
+    .programme .time-slot h3{
+        font-size: 20px;
+    }
+
+    .programme p{
+        font-size: 22px;
+    }
+
+    .footer .support-list img{
+        width: 50px;
+        height: 50px;
+        padding: 0 5px;
+    }
+
+    .programme h2{
+        font-size: 25px;
+    }
+
+    .programme .time-slot{
+        align-items:flex-start;
+    }
+
+    .programme .panels ul li p{
+        font-size: 20px;
+    }
+
+    .programme span{
+        font-size: 17px;
+    }
+
+    .programme .panels{
+        margin: 0 10px;
     }
 }
 
